# Convolutional-KANs-C-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/architectures/: KANconv_and_KAN.h  KANconv_and_MLP.h  conv_and_KAN.h  convolution_cnn.h
include/layers/: KAN_convolution.h  KAN_linear.h  convolution.h
src/architectures/: KANconv_and_KAN.cpp  KANconv_and_MLP.cpp  conv_and_KAN.cpp  convolution_cnn.cpp
src/layers/: KAN_convolution.cpp  KAN_linear.cpp  convolution.cpp
test/add_padding/: add_padding_test.cpp  add_padding_test.h
test/architecture/KANconv_and_KAN/: KANconv_and_KAN_test.cpp  KANconv_and_KAN_test.h
test/architecture/KANconv_and_MLP/: KANconv_and_MLP_test.cpp  KANconv_and_MLP_test.h
test/architecture/conv_and_KAN/: conv_and_KAN_test.cpp  conv_and_KAN_test.h
test/architecture/convolution_cnn/: convolution_cnn_test.cpp  convolution_cnn_test.h
test/calc_out_dims/: calc_out_dims_test.cpp  calc_out_dims_test.h
test/layers/: KAN_convolution_test.cpp  KAN_convolution_test.h
tests/test_conv_and_KAN/: test_conv_and_KAN.cpp  test_conv_and_KAN.py
